[tool.poetry]
name = "best-nine-app"
version = "0.1.0"
description = ""
authors = ["leonardofj <leonardofj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
